--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "autoprefixer": "^10.4.20",
+    "devicon": "^2.16.0",
+    "devicons-react": "^1.3.0",
     "postcss": "^8.4.42",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
