--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio",
+  "homepage": "https://kadevirgil.github.io/portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,7 +18,7 @@
     "autoprefixer": "^10.4.20",
     "devicon": "^2.16.0",
     "devicons-react": "^1.3.0",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.5.6",
     "postcss": "^8.4.42",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
