--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-use-measure": "^2.1.1",
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
