--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-use-measure": "^2.1.1",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
